# simple-cuda-debayer-demo

./: .gitignore  CMakeLists.txt  README.md  kernel.cu  kernel.cuh  main.cpp  outputNsightOriginal.ncu-rep
debayerConverter/: bayerify.py  debayer.py
other_kernels/: README.md  halo_macro_improvement.cu  original_optimization_branchless.cu
